# platform.core.system.libdevice-node

./: CMakeLists.txt  device-node.pc.in  device-node.sh  devman_plugin.pc.in  hwcommon.pc.in  project.config  smack_device_labeling
devices/: CMakeLists.txt  cpu.c  display.c  extcon.c  led.c  memory.c  power.c  process.c  vibrator.c
hal/: common.h  lights.h
hw/: backlight.h  battery.h  cec.h  common.c  common.h  display.h  external_connection.h  ir.h  led.h  sensors.h  touchscreen.h  usb_client.h
hw/default/: backlight.c  shared.c  shared.h
include/: device-internal.h  device-node.h  device-oal.h  devman_plugin_intf.h
oal/: common.h  lights.h
packaging/: libdevice-node.changes  libdevice-node.manifest  libdevice-node.spec  smack-device-labeling.service
plugins/: CMakeLists.txt  device-node-generic.c
src/: device-node.c  device-plugin.c
udev/rules.d/: 51-devices-priv.rules  95-devices.rules  95-permissions-slp.rules
